--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 h2{
     padding-left: -1rem;
-   
+    
 }
 body{
   background-color: black;
@@ -23,11 +23,11 @@ body{
   
 }
 .groundBack{
-background-color: teal;
-border-radius: 15%;
+background: #9ceeeb;
+
 }
 
 .gray{
-  background-color: gray;
+  background-color: rgb(255,253,208);
 }
 
