--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,22 @@ body{
   background-color: rgb(214, 154, 189);;
   height: 300%; 
   width: 100%;
+  box-shadow: 5px 10px  #888888;
+
+ 
+
   
 }
 .groundBack{
 background: #9ceeeb;
 
+
 }
 
 .gray{
   background-color: rgb(255,253,208);
+}
+.shadow{
+  box-shadow: 5px 10px #888888;
 }
 
